force-app/main/default/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Anuencia_MAPA__c</fullName>
        <description>Registra a anuência do MAPA (Ministério da Agricultura) vinculada ao processo do caso.</description>
        <label>Anuência MAPA</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTE__c</fullName>
        <description>Número do Conhecimento de Transporte Eletrônico (CT-e) vinculado ao processo.</description>
        <label>CTE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chave_de_Acesso_DUIMP__c</fullName>
        <description>Chave de acesso da DUIMP (Declaração Única de Importação) vinculada ao processo.</description>
        <label>Chave de Acesso DUIMP</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChavesNF__c</fullName>
        <label>Chaves NF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cliente_DI_ou_DUIMP__c</fullName>
        <description>Identificação do cliente titular da DI ou DUIMP do processo.</description>
        <label>Cliente DI ou DUIMP</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comissaria__c</fullName>
        <description>Nome da comissária de despacho responsável pelo processo.</description>
        <label>Comissaria</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comprovante_de_Vinculo__c</fullName>
        <description>Referência/identificação do comprovante de vínculo apresentado no processo.</description>
        <label>Comprovante de Vínculo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conhecimento__c</fullName>
        <description>Número do Conhecimento de Embarque (BL/AWB) vinculado ao processo.</description>
        <label>Conhecimento</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custo__c</fullName>
        <label>Custo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA__c</fullName>
        <description>Número da Declaração de Admissão (DA) vinculada ao processo.</description>
        <label>DA</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTA__c</fullName>
        <description>Número da Declaração de Trânsito Aduaneiro (DTA) vinculada ao processo.</description>
        <label>DTA</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTA_ou_NF__c</fullName>
        <description>Número da DTA ou da Nota Fiscal vinculada ao processo, conforme aplicável.</description>
        <label>DTA ou NF</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Chegada__c</fullName>
        <description>Data de chegada da carga/navio associada ao processo.</description>
        <label>Data Chegada</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Coleta__c</fullName>
        <description>Data agendada/realizada de coleta da carga.</description>
        <label>Data Coleta</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Final__c</fullName>
        <description>Data final de um período informado no processo.</description>
        <label>Data Final</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Inicial__c</fullName>
        <description>Data inicial de um período informado no processo.</description>
        <label>Data Inicial</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Remocao__c</fullName>
        <description>Data de remoção da carga/contêiner do terminal.</description>
        <label>Data Remoção</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data__c</fullName>
        <description>Data genérica associada ao processo do caso.</description>
        <label>Data</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_da_Entrega__c</fullName>
        <description>Data agendada/realizada de entrega da carga.</description>
        <label>Data da Entrega</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_e_Hora_Pretendida__c</fullName>
        <description>Data e hora pretendida informada pelo solicitante para a operação.</description>
        <label>Data e Hora Pretendida</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Descricao_do_Relatorio__c</fullName>
        <description>Texto detalhado do relatório vinculado ao caso, com formatação rica.</description>
        <label>Descrição do Relatório</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Duvida__c</fullName>
        <description>Descrição resumida da dúvida relatada pelo solicitante.</description>
        <label>Dúvida</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_mail__c</fullName>
        <description>Endereço de e-mail informado pelo solicitante para contato sobre o processo.</description>
        <label>E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Horario_da_Entrega__c</fullName>
        <description>Horário pretendido/realizado da entrega, em formato texto (HH:MM), sem uso do campo Time padrão.</description>
        <inlineHelpText>Informe no formato HH:MM (ex: 14:30).</inlineHelpText>
        <label>Horário da Entrega</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Focus__c</fullName>
        <description>Identificador do processo no sistema Focus vinculado a este caso.</description>
        <label>ID (Focus)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <description>Identificador textual auxiliar informado no processo (não é o Id padrão do registro).</description>
        <label>ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <description>Número da Invoice vinculada ao processo.</description>
        <label>Invoice</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Janela__c</fullName>
        <label>Janela</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MotivoEncerramento__c</fullName>
        <description>Deve ser preenchido no encerramento, conforme regra de negócio.</description>
        <label>Motivo de Encerramento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A definir</fullName>
                    <default>true</default>
                    <label>A definir</label>
                </value>
                <value>
                    <fullName>Resolvido</fullName>
                </value>
                <value>
                    <fullName>Informação prestada</fullName>
                </value>
                <value>
                    <fullName>Sem retorno do cliente</fullName>
                </value>
                <value>
                    <fullName>Solicitação cancelada</fullName>
                </value>
                <value>
                    <fullName>Duplicado</fullName>
                </value>
                <value>
                    <fullName>Fora do escopo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motorista__c</fullName>
        <label>Motorista</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NF_DUE__c</fullName>
        <description>Número da Nota Fiscal vinculada à DUE do processo.</description>
        <label>NF. DUE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nome__c</fullName>
        <description>Nome genérico informado no processo (ex: nome do solicitante ou responsável).</description>
        <label>Nome</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerEmFila__c</fullName>
        <description>Indica automaticamente se o proprietário atual do Case é uma fila, identificada pelo prefixo de Id de Group.</description>
        <formula>BEGINS(CASESAFEID(OwnerId), &quot;00G&quot;)</formula>
        <inlineHelpText>Marcado automaticamente quando o proprietário do Case for uma fila.</inlineHelpText>
        <label>Proprietário em Fila</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Packing_List__c</fullName>
        <description>Referência/identificação da Packing List vinculada ao processo.</description>
        <label>Packing List</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrestadorServico__c</fullName>
        <label>Prestador do serviço</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processo_DTA_DI_DUIMP_DUE_NF__c</fullName>
        <description>Identificação do processo específico desta planilha (DTA, DI, DUIMP, DUE ou NF), distinto do campo genérico Processo__c já existente no Case.</description>
        <label>Processo (DTA, DI, DUIMP, DUE ou NF)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RefCliente__c</fullName>
        <label>Ref. Cliente</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tara__c</fullName>
        <description>Peso da tara do contêiner/veículo informado no processo.</description>
        <label>Tara</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telefone__c</fullName>
        <label>Telefone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Transportadora__c</fullName>
        <description>Nome da transportadora responsável pela operação.</description>
        <label>Transportadora</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Usuario_Portal__c</fullName>
        <description>Identificação do usuário do portal que originou/atualizou o processo.</description>
        <label>Usuário Portal</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>TCSV_Case_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>TipoCaso__c</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UnidadeNegocio__c</field>
            <operation>equals</operation>
            <value>Atendimento Tecon Salvador</value>
        </filters>
        <label>Todos os Casos - Tecon Salvador</label>
        <sharedTo>
            <group>GP_AtendimentoSalvador</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Todos_os_casos_abertos</fullName>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>TipoCaso__c</columns>
        <columns>Categoria__c</columns>
        <columns>Assunto__c</columns>
        <columns>Subassunto__c</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Fechado,Cancelado</value>
        </filters>
        <label>Todos os casos abertos</label>
    </listViews>
    <recordTypes>
        <fullName>AtendimentoCentroLogistico</fullName>
        <active>true</active>
        <businessProcess>Atendimento Centro Logístico</businessProcess>
        <label>Atendimento Centro Logístico</label>
    </recordTypes>
    <recordTypes>
        <fullName>AtendimentoRebocadores</fullName>
        <active>true</active>
        <businessProcess>Atendimento Rebocadores</businessProcess>
        <label>Atendimento Rebocadores</label>
    </recordTypes>
    <recordTypes>
        <fullName>AtendimentoTeconRioGrande</fullName>
        <active>true</active>
        <businessProcess>Tecon Rio Grande</businessProcess>
        <label>Atendimento Tecon Rio Grande</label>
    </recordTypes>
    <recordTypes>
        <fullName>AtendimentoTeconSalvador</fullName>
        <active>true</active>
        <businessProcess>Tecon Salvador</businessProcess>
        <label>Atendimento Tecon Salvador</label>
    </recordTypes>
    <validationRules>
        <fullName>Bloqueio_Horario_Entrega_Invalido</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISBLANK(Horario_da_Entrega__c)),
NOT(REGEX(Horario_da_Entrega__c, &quot;([01][0-9]|2[0-3]):[0-5][0-9]&quot;))
)</errorConditionFormula>
        <errorDisplayField>Horario_da_Entrega__c</errorDisplayField>
        <errorMessage>Horário da Entrega inválido. Informe no formato HH:MM (ex: 14:30).</errorMessage>
    </validationRules>
</CustomObject>