force-app/main/default/objects/Case/fields/AcaoPausaAtiva__c.field-meta.xml
<CustomField>
    <fullName>AcaoPausaAtiva__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Referência para a ação ativa de controle de pausa associada ao acompanhamento do Case.</description>
    <inlineHelpText>Active pause action automatically filled in when follow-up starts.</inlineHelpText>
    <label>Ação de Pausa Ativa</label>
    <referenceTo>Acao__c</referenceTo>
    <relationshipLabel>Cases com Pausa Ativa</relationshipLabel>
    <relationshipName>CasesComPausaAtiva</relationshipName>
    <type>Lookup</type>
</CustomField>