force-app/main/default/objects/Case/fields/AcaoPosCategorizacao__c.field-meta.xml
<CustomField>
    <fullName>AcaoPosCategorizacao__c</fullName>
    <description>Valores sugeridos: Assumir, Distribuir, Encerrar. Usado pelo fluxo de criação manual.</description>
    <label>Ação Pós Categorização</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assumir</fullName>
            </value>
            <value>
                <fullName>Distribuir</fullName>
            </value>
            <value>
                <fullName>Encerrar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>