force-app/main/default/objects/Case/fields/Agendamento__c.field-meta.xml
<CustomField>
    <fullName>Agendamento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Preenchido quando o Caso for criado automaticamente por agendamento recorrente.</description>
    <label>Agendamento de Origem</label>
    <referenceTo>Agendamento__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>