force-app/main/default/objects/Case/fields/AnexoObrigatorio__c.field-meta.xml
<CustomField>
    <fullName>AnexoObrigatorio__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controle auxiliar para validação de anexos, se aplicável.</description>
    <label>Possui Anexo Obrigatório</label>
    <type>Checkbox</type>
</CustomField>