force-app/main/default/objects/Case/fields/AreasAtendimentoAtivas__c.field-meta.xml
<CustomField>
    <fullName>AreasAtendimentoAtivas__c</fullName>
    <description>Usado para ativar milestones concorrentes por área via Entitlement Process.</description>
    <label>Áreas de Atendimento Ativas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AreasParticipantesAtendimento</valueSetName>
    </valueSet>
</CustomField>