force-app/main/default/objects/Case/fields/AreasParticipantes__c.field-meta.xml
<CustomField>
    <fullName>AreasParticipantes__c</fullName>
    <label>Áreas Participantes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AreasParticipantesAtendimento</valueSetName>
    </valueSet>
</CustomField>