force-app/main/default/objects/Case/fields/Armador__c.field-meta.xml
<CustomField>
    <fullName>Armador__c</fullName>
    <description>Identifica o armador (shipowner) envolvido no processo do caso.</description>
    <label>Armador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>