force-app/main/default/objects/Case/fields/ArquivoReferencia__c.field-meta.xml
<CustomField>
    <fullName>ArquivoReferencia__c</fullName>
    <description>Referência ou identificador do arquivo anexado ao caso.</description>
    <label>Arquivo / Referência</label>
    <length>255</length>
    <type>Text</type>
</CustomField>