force-app/main/default/objects/Case/fields/Assunto__c.field-meta.xml
<CustomField>
    <fullName>Assunto__c</fullName>
    <description>Copiado da árvore de categorização.</description>
    <label>Assunto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WS_Assunto</valueSetName>
    </valueSet>
</CustomField>