force-app/main/default/objects/Case/fields/AssuntoCasoRelacionado__c.field-meta.xml
<CustomField>
    <fullName>AssuntoCasoRelacionado__c</fullName>
    <formula>TEXT( Parent.Assunto__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assunto Caso Relacionado</label>
    <type>Text</type>
</CustomField>