force-app/main/default/objects/Case/fields/Atividade__c.field-meta.xml
<CustomField>
    <fullName>Atividade__c</fullName>
    <description>Atividade relacionada ao caso, usada para registro manual em fluxos de categorização e atendimento.</description>
    <label>Atividade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>