force-app/main/default/objects/Case/fields/BaseLocalidade__c.field-meta.xml
<CustomField>
    <fullName>BaseLocalidade__c</fullName>
    <description>Usado quando a categorização exigir identificação de base, filial ou localidade.</description>
    <label>Base / Localidade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>