force-app/main/default/objects/Case/fields/Bat__c.field-meta.xml
<CustomField>
    <fullName>Bat__c</fullName>
    <description>Número ou identificação do BAT (Boletim de Atracação) vinculado ao caso.</description>
    <label>BAT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>