force-app/main/default/objects/Case/fields/BL__c.field-meta.xml
<CustomField>
    <fullName>BL__c</fullName>
    <description>Usado em contextos documentais/aduaneiros.</description>
    <label>BL</label>
    <length>50</length>
    <type>Text</type>
</CustomField>