force-app/main/default/objects/Case/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <description>Usado em atendimentos relacionados a programação/carga.</description>
    <label>Booking</label>
    <length>50</length>
    <type>Text</type>
</CustomField>