force-app/main/default/objects/Case/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <description>Copiado da árvore de categorização.</description>
    <label>Categoria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WS_Categoria</valueSetName>
    </valueSet>
</CustomField>