force-app/main/default/objects/Case/fields/CategoriaCasoRelacionado__c.field-meta.xml
<CustomField>
    <fullName>CategoriaCasoRelacionado__c</fullName>
    <formula>TEXT( Parent.Categoria__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Categoria Caso Relacionado</label>
    <type>Text</type>
</CustomField>