force-app/main/default/objects/Case/fields/Categorizacao__c.field-meta.xml
<CustomField>
    <fullName>Categorizacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Categorização</label>
    <referenceTo>Categorizacao__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>