force-app/main/default/objects/Case/fields/ClienteFinalOrganizacao__c.field-meta.xml
<CustomField>
    <fullName>ClienteFinalOrganizacao__c</fullName>
    <description>Identifica o cliente final ou organização beneficiária do processo do caso.</description>
    <label>Cliente Final / Organização</label>
    <length>255</length>
    <type>Text</type>
</CustomField>