force-app/main/default/objects/Case/fields/CNPJ__c.field-meta.xml
<CustomField>
    <fullName>CNPJ__c</fullName>
    <description>CNPJ da empresa relacionada ao caso, no novo padrão alfanumérico definido pela Receita Federal.</description>
    <label>CNPJ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>