force-app/main/default/objects/Case/fields/Colaborador__c.field-meta.xml
<CustomField>
    <fullName>Colaborador__c</fullName>
    <label>Colaborador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>