force-app/main/default/objects/Case/fields/ComentarioEncerramento__c.field-meta.xml
<CustomField>
    <fullName>ComentarioEncerramento__c</fullName>
    <description>Comentário complementar usado pelo LWC de encerramento.</description>
    <label>Comentário de Encerramento</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>