force-app/main/default/objects/Case/fields/Container__c.field-meta.xml
<CustomField>
    <fullName>Container__c</fullName>
    <label>Container</label>
    <length>255</length>
    <type>Text</type>
</CustomField>