force-app/main/default/objects/Case/fields/DadosMinimosPedido__c.field-meta.xml
<CustomField>
    <fullName>DadosMinimosPedido__c</fullName>
    <description>Conjunto mínimo de dados exigidos para tratar o pedido informado no caso.</description>
    <label>Dados Mínimos do Pedido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>