force-app/main/default/objects/Case/fields/DadoVerificavelProcesso__c.field-meta.xml
<CustomField>
    <fullName>DadoVerificavelProcesso__c</fullName>
    <description>Dado do processo que pode ser conferido para validar a solicitação.</description>
    <label>Dado Verificável do Processo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>