force-app/main/default/objects/Case/fields/DataHoraEnvioPesquisa__c.field-meta.xml
<CustomField>
    <fullName>DataHoraEnvioPesquisa__c</fullName>
    <description>Registra quando a pesquisa foi enviada.</description>
    <label>Data/Hora de Envio da Pesquisa</label>
    <type>DateTime</type>
</CustomField>