force-app/main/default/objects/Case/fields/DataHoraPausaMilestone__c.field-meta.xml
<CustomField>
    <fullName>DataHoraPausaMilestone__c</fullName>
    <description>Registra o início da pausa dos marcos SLA quando o caso entra em Aguardando Cliente.</description>
    <label>Data/Hora Início Pausa Milestone</label>
    <type>DateTime</type>
</CustomField>