force-app/main/default/objects/Case/fields/DataInicioAcompanhamento__c.field-meta.xml
<CustomField>
    <fullName>DataInicioAcompanhamento__c</fullName>
    <description>Registra a data e hora em que o Case entrou em acompanhamento.</description>
    <inlineHelpText>Date and time automatically filled in when follow-up starts.</inlineHelpText>
    <label>Data/Hora de Início do Acompanhamento</label>
    <type>DateTime</type>
</CustomField>