force-app/main/default/objects/Case/fields/DataNascimento__c.field-meta.xml
<CustomField>
    <fullName>DataNascimento__c</fullName>
    <description>Data de nascimento da pessoa física relacionada ao caso.</description>
    <label>Data de Nascimento</label>
    <type>Date</type>
</CustomField>