force-app/main/default/objects/Case/fields/DecisaoArmador__c.field-meta.xml
<CustomField>
    <fullName>DecisaoArmador__c</fullName>
    <description>Registra a decisão tomada pelo armador em relação ao processo do caso.</description>
    <label>Decisão do Armador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>