force-app/main/default/objects/Case/fields/DI_DUIMP__c.field-meta.xml
<CustomField>
    <fullName>DI_DUIMP__c</fullName>
    <description>Usado em atendimento aduaneiro/documental.</description>
    <label>DI / DUIMP</label>
    <length>50</length>
    <type>Text</type>
</CustomField>