force-app/main/default/objects/Case/fields/DistribuicaoSolicitada__c.field-meta.xml
<CustomField>
    <fullName>DistribuicaoSolicitada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica que o Case deve ser distribuído após criação.</description>
    <label>Distribuição Solicitada</label>
    <type>Checkbox</type>
</CustomField>