force-app/main/default/objects/Case/fields/DocumentacaoFaltante__c.field-meta.xml
<CustomField>
    <fullName>DocumentacaoFaltante__c</fullName>
    <description>Lista a documentação ainda pendente de envio para conclusão do caso.</description>
    <label>Documentação Faltante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>