force-app/main/default/objects/Case/fields/DtGeracaoReclamacao__c.field-meta.xml
<CustomField>
    <fullName>DtGeracaoReclamacao__c</fullName>
    <description>Registra quando o espelho da reclamação foi criado.</description>
    <label>Data/Hora da Geração da Reclamação</label>
    <type>DateTime</type>
</CustomField>