force-app/main/default/objects/Case/fields/DUE__c.field-meta.xml
<CustomField>
    <fullName>DUE__c</fullName>
    <description>Número da DUE (Declaração Única de Exportação) vinculada ao caso.</description>
    <label>DUE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>