force-app/main/default/objects/Case/fields/EmailExcluido__c.field-meta.xml
<CustomField>
    <fullName>EmailExcluido__c</fullName>
    <description>E-mail removido do cadastro do contato ou conta, registrado para rastreabilidade da alteração.</description>
    <label>E-mail Excluído</label>
    <length>255</length>
    <type>Text</type>
</CustomField>