force-app/main/default/objects/Case/fields/EmailIncluido__c.field-meta.xml
<CustomField>
    <fullName>EmailIncluido__c</fullName>
    <description>E-mail incluído no cadastro do contato ou conta, registrado para rastreabilidade da alteração.</description>
    <label>E-mail Incluído</label>
    <length>255</length>
    <type>Text</type>
</CustomField>