force-app/main/default/objects/Case/fields/EmailUsuario__c.field-meta.xml
<CustomField>
    <fullName>EmailUsuario__c</fullName>
    <description>E-mail do usuário que solicitou ou está vinculado ao caso.</description>
    <label>E-mail do Usuário</label>
    <length>255</length>
    <type>Text</type>
</CustomField>