force-app/main/default/objects/Case/fields/Empresa__c.field-meta.xml
<CustomField>
    <fullName>Empresa__c</fullName>
    <description>Nome da empresa relacionada ao caso.</description>
    <label>Empresa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>