force-app/main/default/objects/Case/fields/EmpresaRepresentada__c.field-meta.xml
<CustomField>
    <fullName>EmpresaRepresentada__c</fullName>
    <description>Empresa representada pelo solicitante no atendimento do caso.</description>
    <label>Empresa Representada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>