force-app/main/default/objects/Case/fields/EnviarPesquisaSatisfacao__c.field-meta.xml
<CustomField>
    <fullName>EnviarPesquisaSatisfacao__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marcado no encerramento do Case. O sistema alerta se o requisitante já recebeu pesquisa no dia, mas não bloqueia o envio.</description>
    <label>Enviar Pesquisa de Satisfação</label>
    <type>Checkbox</type>
</CustomField>