force-app/main/default/objects/Case/fields/EtapaAnteriorAcompanhamento__c.field-meta.xml
<CustomField>
    <fullName>EtapaAnteriorAcompanhamento__c</fullName>
    <description>Preserva a etapa anterior do Case antes da entrada em acompanhamento.</description>
    <inlineHelpText>Field automatically filled in with the stage prior to follow-up.</inlineHelpText>
    <label>Etapa Anterior do Acompanhamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>