force-app/main/default/objects/Case/fields/EtapaAtendimento__c.field-meta.xml
<CustomField>
    <fullName>EtapaAtendimento__c</fullName>
    <description>Controla o Path operacional: Novo, Em Triagem, Em Atendimento, Aguardando Cliente, Aguardando Área Interna, Em Acompanhamento, Preparando Retorno ao Cliente, Concluído, Cancelado.</description>
    <label>Etapa Atendimento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Novo</fullName>
                <default>true</default>
                <label>Novo</label>
            </value>
            <value>
                <fullName>Em Triagem</fullName>
            </value>
            <value>
                <fullName>Em Atendimento</fullName>
            </value>
            <value>
                <fullName>Aguardando Cliente</fullName>
            </value>
            <value>
                <fullName>Aguardando Área Interna</fullName>
            </value>
            <value>
                <fullName>Em Acompanhamento</fullName>
            </value>
            <value>
                <fullName>Preparando Retorno ao Cliente</fullName>
            </value>
            <value>
                <fullName>Concluído</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Aguardando atendimento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>