force-app/main/default/objects/Case/fields/EvidenciaGatePlaca__c.field-meta.xml
<CustomField>
    <fullName>EvidenciaGatePlaca__c</fullName>
    <label>Evidência Gate – Placa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>