force-app/main/default/objects/Case/fields/FaixaEsperada__c.field-meta.xml
<CustomField>
    <fullName>FaixaEsperada__c</fullName>
    <description>Faixa de valor ou prazo esperada para o desfecho do caso.</description>
    <label>Faixa Esperada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>