force-app/main/default/objects/Case/fields/FilaDestinoDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>FilaDestinoDeveloperName__c</fullName>
    <description>Guarda o DeveloperName da fila para distribuição.</description>
    <label>Fila Destino DeveloperName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>