force-app/main/default/objects/Case/fields/FilaDestinoId__c.field-meta.xml
<CustomField>
    <fullName>FilaDestinoId__c</fullName>
    <description>Cache do Group.Id da fila. Usado para facilitar atribuição de OwnerId.</description>
    <label>Fila Destino Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>