force-app/main/default/objects/Case/fields/IdentificacaoCliente__c.field-meta.xml
<CustomField>
    <fullName>IdentificacaoCliente__c</fullName>
    <description>Dado utilizado para identificar o cliente vinculado ao caso.</description>
    <label>Identificação do Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>