force-app/main/default/objects/Case/fields/IdentificacaoMinima__c.field-meta.xml
<CustomField>
    <fullName>IdentificacaoMinima__c</fullName>
    <description>Conjunto mínimo de dados de identificação exigido para tratar o caso.</description>
    <label>Identificação Mínima</label>
    <length>255</length>
    <type>Text</type>
</CustomField>