force-app/main/default/objects/Case/fields/IdiomaAtendimento__c.field-meta.xml
<CustomField>
    <fullName>IdiomaAtendimento__c</fullName>
    <description>Especialmente aplicável a cenários de atendimento internacional/Rebocadores, se confirmado.</description>
    <label>Idioma de Atendimento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Português</fullName>
                <default>true</default>
                <label>Português</label>
            </value>
            <value>
                <fullName>Inglês</fullName>
            </value>
            <value>
                <fullName>Espanhol</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>