force-app/main/default/objects/Case/fields/IMO__c.field-meta.xml
<CustomField>
    <fullName>IMO__c</fullName>
    <description>Número IMO do navio relacionado ao caso.</description>
    <label>IMO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>