force-app/main/default/objects/Case/fields/InvoiceCancelada__c.field-meta.xml
<CustomField>
    <fullName>InvoiceCancelada__c</fullName>
    <description>Indica se a invoice relacionada ao caso foi cancelada.</description>
    <label>Invoice Cancelada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SimNao</valueSetName>
    </valueSet>
</CustomField>