force-app/main/default/objects/Case/fields/Mercadoria__c.field-meta.xml
<CustomField>
    <fullName>Mercadoria__c</fullName>
    <description>Descrição da mercadoria relacionada ao caso.</description>
    <label>Mercadoria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>